Fix overflow pc

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -872,6 +872,65 @@ body {
           font-size: 2rem;
           color: #fff;
       }
+      .modal {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        opacity: 0;
+        visibility: hidden;
+        transform: scale(1.1);
+        transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+      }
+      .modal-content {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #414562;
+        font-family: 'VT323', monospace;
+        border: black 3px solid;
+        font-size: 1.7rem;
+        color: white;
+        padding: 1rem 1.5rem;
+        width: 24rem;
+        border-radius: 0.5rem;
+      }
+      .close-button {
+        float: right;
+        width: 1.5rem;
+        line-height: 1.5rem;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 0.25rem;
+        color: black;
+        background-color: rgba(187, 148, 248, 1);
+        border: 3px black solid;
+      }
+      .close-button:hover {
+        background-color: darkgray;
+      }
+      .show-modal {
+        opacity: 1;
+        visibility: visible;
+        transform: scale(0.8);
+        transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+      }    
+      .trigger {
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+        background: rgba(232, 61, 78, 1);
+        height: 4vh;
+        border: none;
+        border-radius: 2vw;
+        font-family: 'VT323', monospace;
+        font-size: 2rem;
+        color: #fff; 
+      }
+      }
     } 
     }
   }
